fixed scrollbar colour

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -48,7 +48,7 @@ body {
       background: $clouds;; 
   }
   &::-webkit-scrollbar-thumb {
-      background: rgba($peterRiver,0.4); 
+      background: rgba($mainBg,0.4); 
   }
 }
 
